added build script to package json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "scripts": {
         "dev": "NODE_OPTIONS='--inspect=8133' next dev -p 8133",
+        "build": "next build",
         "start": "next start -p 8133",
         "rm:all": "rm -rf node_modules .next out dist build package-lock.json yarn.lock bun.lockb",
         "re:dev": "npm run rm:all && bun install && npm run dev",
