--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "@tanstack/react-table": "^8.20.5",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
         "lucide-react": "^0.462.0",
         "next": "^14.2.4",
         "next-themes": "^0.4.4",
